--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: scanner_widget
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
-
 
 dependencies:
   flutter:
@@ -23,11 +22,8 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
-
 flutter:
-
   uses-material-design: true
 
-
-  assets:
-    - assets/
+  # assets:
+  #   - assets/
